[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubepath-sdk"
version = "0.1.0"
description = "CubePath Cloud API Python SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/CubePathInc/cubepath-python-sdk"
Documentation = "https://github.com/CubePathInc/cubepath-python-sdk"
Repository = "https://github.com/CubePathInc/cubepath-python-sdk"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
